--- a/assets/scss/global/reset.scss
+++ b/assets/scss/global/reset.scss
@@ -35,6 +35,32 @@ a {
   background-color: transparent;
 }
 
+img,
+svg {
+  max-width: 100%;
+}
+
 [tabindex='-1'] {
   outline: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: normal;
+}
+
+h1 {
+  font-size: 7rem;
+}
+
+h2 {
+  font-size: 5rem;
+}
+
+h3 {
+  font-size: 2.6rem;
 }
