--- a/assets/scss/global/utils.scss
+++ b/assets/scss/global/utils.scss
@@ -14,8 +14,9 @@
   border-radius: 4px;
   color: #000;
   font-size: 2.2rem;
-  padding: $s-xs $s-m;
+  padding: $s-xs $s-s;
   border: 2px solid #c7d2e9;
+  cursor: pointer;
   transition: color 0.25s ease;
 
   @media (prefers-reduced-motion) {
