--- a/assets/scss/global/reset.scss
+++ b/assets/scss/global/reset.scss
@@ -55,15 +55,29 @@ h6 {
 }
 
 h1 {
-  font-size: 7rem;
+  font-size: 4rem;
 }
 
 h2 {
-  font-size: 5rem;
+  font-size: 3rem;
 }
 
 h3 {
-  font-size: 2.6rem;
+  font-size: 2.2rem;
+}
+
+@media screen and (min-width: 70rem) {
+  h1 {
+    font-size: 7rem;
+  }
+
+  h2 {
+    font-size: 5rem;
+  }
+
+  h3 {
+    font-size: 2.6rem;
+  }
 }
 
 [inert] {
